--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ description: Análisis de clickstream con Spark (actividad)
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
+sass:
+  style: compressed
+
+
